src/snapshots/afrotd__parser__tests__interpretation_2.16.6_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 6
index: 1
text: "Nach einem Touchdown und einem erfolgreichen Zweipunkteversuch liegt Team A bei 55 Sekunden verbleibender Spielzeit in der\nvierten Spielperiode 22-24 zurück. Team A versucht von der A-35 einen\nOnside Free Kick durchzuführen. Kicker A90 hält den Ball, als wolle er\neinen Drop Kick versuchen. Er wirft den Ball in die Luft und der Ball\nprallt kurz hinter Team A’s Restraining Line auf den Boden. A90 kickt\nden Ball, nachdem dieser etwa einen Meter hoch in die Luft gesprungen war."
ruling: "Illegaler Kick. Dead Ball Foul. 5-Meterstrafe vom\nSucceeding Spot. Der Kick entspricht gemäß Regel 2.16.3 nicht den\nAnforderungen eines Drop Kicks. Für einen legalen Drop Kick muss\nder potenzielle Kicker den Ball fallen lassen und kicken, sobald dieser\nden Boden berührt. Da Regel 2.16.6 nur einen Place Kick oder einen\nDrop Kick als Kickoff erlaubt, ist der o. a. beschriebene Kick kein legaler Kick. Die Strafdurchführung entspricht der derzeitigen anerkannten\nRegelauslegung A.R. 6.1.2.I."
