src/snapshots/afrotd__parser__tests__interpretation_2.19.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 19
  - 2
index: 1
text: "A1 versucht, einen Vorwärtspass zu werfen, aber B1 schlägt\nihm den Ball aus der Hand, bevor die Vorwärtsbewegung von A1’s Hand\nbeginnt."
ruling: Fumble (Regel 2.11.1).
