src/snapshots/afrotd__parser__tests__interpretation_2.23.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 23
  - 1
index: 1
text: "4. und Goal von der B-5. A55’s legaler Snap wird von A12 gemufft und (a) einer der Team A-Spieler recovert und advanct den Ball in\ndie Endzone oder (b) ein Spieler von Team B recovert und advanct den\nBall."
ruling: "Der Snap ist ein Rückpass und darf von jedem Spieler\nadvanct werden. (a) Touchdown. Da es ein Rückpass und kein Fumble\nist, gibt es für Team A-Spieler keine Einschränkung zum Recovern und\nTragen des Balles. (b) Der Ball bleibt im Spiel."
