src/snapshots/afrotd__parser__tests__interpretation_2.27.12_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 12
index: 1
text: Ein Spieler wird in der zweiten Spielhälfte wegen eines Targeting Fouls disqualifiziert.
ruling: "Der Spieler muss den Platz innerhalb einer angemessenen Frist verlassen. Er muss sich unter Aufsicht\nseines Teams außerhalb des Platzes aufhalten und darf keinerlei Einfluss auf das Spielgeschehen nehmen. Die Dauer der Sperre ergibt sich\naus der Entscheidung der zuständigen Stelle."
