src/snapshots/afrotd__parser__tests__interpretation_2.30.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 2
  - 30
  - 4
index: 2
text: "3. und 10. A21 fängt einen Vorwärtspass und wird nach 10 Metern Raumgewinn getackelt. Er fumbelt durch den Tackle. Der Fumble\nwird 5 Meter jenseits des Fumble Spots von dem am Boden liegenden\nA24 recovert. Während des Passes wird der Passer gerought."
ruling: "15-Meterstrafe vom Punkt der Recovery durch A24 (Ende des\nletzten Laufes). First Down für Team A."
